--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Logoipsum</title>
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -61,6 +65,57 @@
         </div>
         <div >
             <img src="./img/firstmen.png" alt="firstmen" class="">
+        </div>
+    </section>
+    <section class="container subscribe">
+        <div>
+            <img src="img/secondmen.png" alt="second men">
+        </div>
+        <div>
+            <h2>Subscription index</h2>
+            <form >
+                <input class="subscribe_form" type="email" name="email" placeholder="Email" required>
+                <input class="button button_violet" type="button" value="Try">
+            </form>
+        </div>
+    </section>
+    <section class="container plan">
+        <h3>Get the right plan for future</h3>
+        <div class="plan_all">
+            <div class="item">
+                <p class="item_text">Starter</p>
+                <h4 class="item_title">Free</h4>
+                <ul>
+                    <li class="item_li">1 Website</li>
+                    <li class="item_li">5 GB Hosting</li>
+                    <li class="item_li">Limited Support</li>
+                </ul>
+                <button class="button btn_item">Get Started</button>
+            </div>
+            <div class="item">
+                <p class="item_text">Premium</p>
+                <h5 class="item_title item_title_nun">
+                    $29<span>/month</span>
+                </h5>
+                <ul>
+                    <li class="item_li">10 Website</li>
+                    <li class="item_li">15 GB Hosting</li>
+                    <li class="item_li">Premium Support</li>
+                </ul>
+                <button class="button btn_item">Get Started</button>
+            </div>
+            <div class="item">
+                <p class="item_text">Enterprise</p>
+                <h6 class="item_title item_title_nun">
+                    $49<span>/month</span>
+                </h6>
+                <ul>
+                    <li class="item_li">Unlimited Website</li>
+                    <li class="item_li">50 GB Hosting</li>
+                    <li class="item_li">Premium Support</li>
+                </ul>
+                <button class="button btn_item">Get Started</button>
+            </div>
         </div>
     </section>
     <footer class="footer">
