--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container header_flex">
             <div>
             <a href="#">
-                <img src="/img/Logo.svg" alt="logo">
+                <img src="img/Logo.svg" alt="logo">
             </a>
             </div>
             <nav class="nav">
@@ -122,7 +122,7 @@
         <div class="container ft_flex">
             <div>
                 <a href="#">
-                    <img src="./img/Logo.svg" alt="logo">
+                    <img src="img/Logo.svg" alt="logo">
                 </a>
             </div>
             <nav class="navft">
